change machine states colors and fix flickering pause button

--- a/source/css/colors.css.scss
+++ b/source/css/colors.css.scss
@@ -9,6 +9,9 @@ $muted-violet-color: #CBBFC5;
 $cream-color: #F4F2E9;
 $muted-cream-color: #F9F8F4;
 
-
 // vm states colors
-$running-color: #52BBBF;
+$running-color: #3fc380;
+$paused-color: #a2ded0;
+$restart-color: #F2784B;
+//$stopped-color: #f64747;
+$stopped-color: $red-color;
