--- a/source/css/pages/machine/power.css.scss
+++ b/source/css/pages/machine/power.css.scss
@@ -30,8 +30,19 @@
         background-color: $grouping-bg;
 
         i {
-          color: $running-color;
           margin-right: 7px;
+          &.fa-play {
+            color: $running-color;
+          }
+          &.fa-pause {
+            color: $paused-color;
+          }
+          &.fa-repeat {
+            color: $restart-color;
+          }
+          &.fa-stop {
+            color: $stopped-color;
+          }
         }
       }
     }
@@ -47,9 +58,67 @@
     margin-top: 40px;
     text-align: center;
     .btn-group {
+      a.btn {
+        width: 140px;
+        @include transition(color, 0.25s, ease-in);
+
+        &:hover {
+          @include transition(color, 0.25s, ease-in);
+        }
+      }
+      a.disabled {
+        opacity: 0.4;
+      }
       a.action.start {
-        color: white;
-        background-color: $running-color;
+        &.active {
+          color: white;
+          background-color: $running-color;
+          i {
+            color: white;
+          }
+        }
+      }
+      a.action.pause {
+        &.active {
+          color: white;
+          background-color: $paused-color;
+          i {
+            color: white;
+          }
+        }
+      }
+      a.action.resume {
+        padding-left: 15px;
+        padding-right: 15px;
+        &.active {
+          color: white;
+          background-color: $paused-color;
+          i {
+            color: white;
+          }
+        }
+      }
+      a.action.restart {
+        &.active {
+          color: white;
+          background-color: $restart-color;
+          i {
+            color: white;
+          }
+        }
+      }
+      a.action.stop {
+        &.active {
+          color: white;
+          background-color: $stopped-color;
+          i {
+            color: white;
+          }
+        }
+      }
+      .dropdown-toggle {
+        padding-left: 15px;
+        padding-right: 15px;
       }
     }
   }
